fix: ajustes analytics, ddl, docker e requirements

--- a/Transformer/etl_raw_to_silver.ipynb
+++ b/Transformer/etl_raw_to_silver.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Iniciando a transformação e limpeza dos dados...\")\n",
+    "print(\"Iniciando a transformação e limpeza dos dados para a One Big Table...\")\n",
     "\n",
     "# 1. Remover espaços em branco das colunas\n",
     "print(\"1️⃣  Removendo espaços em branco dos nomes das colunas...\")\n",
@@ -170,12 +170,71 @@
     ")\n",
     "print(\"   ✅ Indicador 'Nivel_Severidade' criado\")\n",
     "\n",
-    "# 7. Filtrar registros com data válida (opcional)\n",
+    "# 7. Filtrar registros com data válida\n",
     "print(\"\\n7️⃣  Filtrando registros com data válida...\")\n",
     "df_silver = df_silver.filter(col(\"Data e Hora da Ocorrencia\").isNotNull())\n",
     "print(f\"   ✅ Registros após filtragem: {df_silver.count()}\")\n",
     "\n",
-    "print(\"\\n✅ Transformação de dados concluída!\")\n",
+    "# 8. Mapear e renomear colunas para nomes abreviados (One Big Table - silver.acd)\n",
+    "print(\"\\n8️⃣  Renomeando colunas para formato abreviado (silver.acd)...\")\n",
+    "rename_mapping = {\n",
+    "    \"Codigo da Ocorrencia\": \"cod_ocr\",\n",
+    "    \"Numero da Ficha\": \"num_fic\",\n",
+    "    \"Data e Hora da Ocorrencia\": \"dta_ocr\",\n",
+    "    \"Ano\": \"ano\",\n",
+    "    \"Mes\": \"mes\",\n",
+    "    \"Dia\": \"dia\",\n",
+    "    \"Hora\": \"hor\",\n",
+    "    \"UF da Ocorrencia\": \"uf\",\n",
+    "    \"Municipio da Ocorrencia\": \"mun\",\n",
+    "    \"Regiao da Ocorrencia\": \"reg\",\n",
+    "    \"Latitude\": \"lat\",\n",
+    "    \"Longitude\": \"lon\",\n",
+    "    \"Classificacao da Ocorrencia\": \"cls_ocr\",\n",
+    "    \"Tipo de Ocorrencia\": \"tpo_ocr\",\n",
+    "    \"Tipo de Operacao da Aeronave\": \"tpo_ope\",\n",
+    "    \"Fase de Operacao da Aeronave\": \"fse_ope\",\n",
+    "    \"Tipo de Aeronave\": \"tpo_aer\",\n",
+    "    \"Fabricante da Aeronave\": \"fab_aer\",\n",
+    "    \"Modelo da Aeronave\": \"mdl_aer\",\n",
+    "    \"Matricula da Aeronave\": \"mat_aer\",\n",
+    "    \"Numero de Serie da Aeronave\": \"sre_aer\",\n",
+    "    \"Ano de Fabricacao da Aeronave\": \"ano_fab_aer\",\n",
+    "    \"Quantidade de Assentos na Aeronave\": \"qtd_ase_aer\",\n",
+    "    \"Nivel de Dano da Aeronave\": \"nvl_dno\",\n",
+    "    \"Total de Fatalidades no Acidente\": \"ttl_fat\",\n",
+    "    \"Total de Aeronaves Envolvidas\": \"ttl_aer_env\",\n",
+    "    \"Total de Recomendacoes\": \"ttl_rec\",\n",
+    "    \"Status da Investigacao\": \"sts_inv\",\n",
+    "    \"Relatorio Publicado\": \"rlt_pub\",\n",
+    "    \"Nivel_Severidade\": \"nvl_sev\",\n",
+    "    \"Pais da Ocorrencia\": \"pais_ocr\",\n",
+    "    \"Horario de Salida\": \"hor_sda\",\n",
+    "    \"Horario de Chegada\": \"hor_chg\",\n",
+    "    \"Rota\": \"rta\",\n",
+    "    \"Operador Padronizado\": \"ope_pdr\",\n",
+    "    \"Historico da Aeronave\": \"hst_aer\"\n",
+    "}\n",
+    "\n",
+    "for old_name, new_name in rename_mapping.items():\n",
+    "    if old_name in df_silver.columns:\n",
+    "        df_silver = df_silver.withColumnRenamed(old_name, new_name)\n",
+    "\n",
+    "# Selecionar apenas as colunas mapeadas (criar a One Big Table)\n",
+    "colunas_finais = [new_name for old_name, new_name in rename_mapping.items() if old_name in df_silver.columns]\n",
+    "df_silver = df_silver.select(*colunas_finais)\n",
+    "\n",
+    "print(f\"   ✅ {len(colunas_finais)} colunas renomeadas e selecionadas para a One Big Table\")\n",
+    "\n",
+    "# Converter lat/lon para DOUBLE PRECISION\n",
+    "print(\"\\n9️⃣  Convertendo coordenadas para numérico...\")\n",
+    "if \"lat\" in df_silver.columns:\n",
+    "    df_silver = df_silver.withColumn(\"lat\", col(\"lat\").cast(\"double\"))\n",
+    "if \"lon\" in df_silver.columns:\n",
+    "    df_silver = df_silver.withColumn(\"lon\", col(\"lon\").cast(\"double\"))\n",
+    "print(\"   ✅ Coordenadas convertidas\")\n",
+    "\n",
+    "print(\"\\n✅ Transformação de dados para One Big Table concluída!\")\n",
     "df_silver.printSchema()"
    ]
   },
@@ -194,13 +253,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\nIniciando a carga de dados no banco de dados...\")\n",
+    "print(\"\\nIniciando a carga de dados na One Big Table (silver.acd)...\")\n",
     "jdbc_hostname = os.getenv(\"DB_HOST\", \"localhost\")\n",
     "jdbc_port     = os.getenv(\"DB_PORT\", \"5432\")\n",
     "jdbc_database = os.getenv(\"DB_NAME\", \"acidentes_aereos\")\n",
     "db_user       = os.getenv(\"DB_USER\", \"postgres\")\n",
     "db_password   = os.getenv(\"DB_PASSWORD\", \"postgres\")\n",
-    "table_name    = \"public.acidentes_silver\"\n",
+    "table_name    = \"silver.acd\"\n",
     "jdbc_url = f\"jdbc:postgresql://{jdbc_hostname}:{jdbc_port}/{jdbc_database}\"\n",
     "connection_properties = {\"user\": db_user, \"password\": db_password, \"driver\": \"org.postgresql.Driver\"}\n",
     "\n",
@@ -222,7 +281,7 @@
     "            raise e\n",
     "\n",
     "try:\n",
-    "    print(f\"Iniciando a escrita de dados na tabela: {table_name}\")\n",
+    "    print(f\"Iniciando a escrita de dados na One Big Table: {table_name}\")\n",
     "    \n",
     "    df_silver.write \\\n",
     "        .mode(\"overwrite\") \\\n",
@@ -251,17 +310,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\nValidando a tabela SILVER (amostra):\")\n",
-    "df_silver.orderBy(col(\"Ano\").desc()).show(10, truncate=False)\n",
+    "print(\"\\nValidando a One Big Table SILVER (amostra):\")\n",
+    "df_silver.orderBy(col(\"ano\").desc()).show(10, truncate=False)\n",
     "\n",
-    "print(\"\\n=== ESTATÍSTICAS FINAIS ===\")\n",
+    "print(\"\\n=== ESTATÍSTICAS FINAIS DA ONE BIG TABLE ===\")\n",
     "print(f\"Total de registros processados: {df_silver.count()}\")\n",
     "print(f\"Colunas na tabela SILVER: {len(df_silver.columns)}\")\n",
     "\n",
     "print(\"\\nDistribuição por Nível de Severidade:\")\n",
-    "df_silver.groupBy(\"Nivel_Severidade\").count().orderBy(col(\"count\").desc()).show()\n",
+    "df_silver.groupBy(\"nvl_sev\").count().orderBy(col(\"count\").desc()).show()\n",
     "\n",
-    "print(\"\\n🚀 Job ETL (Raw → Silver → Database) finalizado com sucesso!\")\n",
+    "print(\"\\nTop 5 Tipos de Ocorrências:\")\n",
+    "df_silver.groupBy(\"tpo_ocr\").count().orderBy(col(\"count\").desc()).limit(5).show()\n",
+    "\n",
+    "print(\"\\nTop 5 UFs com mais acidentes:\")\n",
+    "df_silver.groupBy(\"uf\").count().orderBy(col(\"count\").desc()).limit(5).show()\n",
+    "\n",
+    "print(\"\\n🚀 Job ETL (Raw → Silver → One Big Table) finalizado com sucesso!\")\n",
     "spark.stop()"
    ]
   }
