fix: ajustes analytics e etl

--- a/Transformer/etl_raw_to_silver.ipynb
+++ b/Transformer/etl_raw_to_silver.ipynb
@@ -1,36 +1,29 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "76535204",
+   "cell_type": "markdown",
+   "id": "91bd2f08",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🇧🇷 Iniciando o processo ETL (Raw -> Silver) - Acidentes Aéreos...\n",
-      "📂 Buscando arquivo de dados brutos...\n",
-      "   -> Lendo Arquivo: ..\\Data_Layer\\raw\\data_raw.csv...\n",
-      "✅ Carga Raw Completa! Registros carregados: 6114\n",
-      "🛠️ Iniciando a limpeza, padronização e remoção de nulos...\n",
-      "   -> Processando datas...\n",
-      "   -> Corrigindo Lat/Lon científica...\n",
-      "   -> Convertendo números...\n",
-      "✨ Transformação concluída! Base Silver Final: 6114 registros.\n",
-      "\n",
-      "🔌 Conectando ao Banco de Dados...\n",
-      "⚠️ Falha ao conectar em 'db'. Tentando 'localhost' (caso esteja rodando localmente)...\n",
-      "✅ Conectado via Localhost!\n",
-      "📜 Verificando DDL...\n",
-      "💾 Inserindo 6114 registros na tabela 'public.acd'...\n",
-      "✅ SUCESSO! Dados carregados na tabela 'public.acd'.\n",
-      "\n",
-      "🚀 Job ETL finalizado em 7.00 segundos!\n"
-     ]
-    }
-   ],
+   "source": [
+    "# ETL Raw -> Silver\n",
+    "Pipeline de transformação de dados brutos para a camada Silver (Acidentes Aéreos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7f2883b",
+   "metadata": {},
+   "source": [
+    "## 1. Importações e Configuração Inicial\n",
+    "Importação de bibliotecas necessárias e inicialização do processo ETL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41e23983",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -58,8 +51,25 @@
     "    for path in possible_paths:\n",
     "        if os.path.exists(path):\n",
     "            return path\n",
-    "    return None\n",
-    "\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d7b4067",
+   "metadata": {},
+   "source": [
+    "## 2. Extração (EXTRACTION)\n",
+    "Carregamento dos dados brutos do arquivo CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00bebac0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ==============================================================================\n",
     "# 2. EXTRAÇÃO (EXTRACTION)\n",
     "# ==============================================================================\n",
@@ -81,8 +91,25 @@
     "\n",
     "except Exception as e:\n",
     "    print(f\"❌ Erro ao ler CSV: {e}\")\n",
-    "    exit(1)\n",
-    "\n",
+    "    exit(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52e37eb9",
+   "metadata": {},
+   "source": [
+    "## 3. Transformação (TRANSFORMATION)\n",
+    "Fase de limpeza, padronização e remoção de dados inválidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5c6668d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ==============================================================================\n",
     "# 3. TRANSFORMAÇÃO (TRANSFORMATION)\n",
     "# ==============================================================================\n",
@@ -183,8 +210,25 @@
     "cols_existentes = [c for c in cols_finais if c in df_silver.columns]\n",
     "df_final = df_silver[cols_existentes].copy()\n",
     "\n",
-    "print(f\"✨ Transformação concluída! Base Silver Final: {len(df_final)} registros.\")\n",
-    "\n",
+    "print(f\"✨ Transformação concluída! Base Silver Final: {len(df_final)} registros.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "795c1a3b",
+   "metadata": {},
+   "source": [
+    "## 4. Carga no Banco de Dados (LOADING)\n",
+    "Conexão ao banco de dados, execução de DDL e inserção dos dados transformados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "114a3cb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ==============================================================================\n",
     "# 4. CARGA NO BANCO DE DADOS (LOADING)\n",
     "# ==============================================================================\n",
