fix: ajustes analytics e etl

--- a/Transformer/etl_raw_to_silver.ipynb
+++ b/Transformer/etl_raw_to_silver.ipynb
@@ -31,9 +31,7 @@
     "import time\n",
     "from sqlalchemy import create_engine, text\n",
     "\n",
-    "# ==============================================================================\n",
     "# 1. CONFIGURAÇÃO E INÍCIO\n",
-    "# ==============================================================================\n",
     "print(\"🇧🇷 Iniciando o processo ETL (Raw -> Silver) - Acidentes Aéreos...\")\n",
     "start_time = time.time()\n",
     "\n",
@@ -70,9 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ==============================================================================\n",
     "# 2. EXTRAÇÃO (EXTRACTION)\n",
-    "# ==============================================================================\n",
     "print(\"📂 Buscando arquivo de dados brutos...\")\n",
     "\n",
     "nome_arquivo_raw = 'data_raw.csv'\n",
@@ -110,13 +106,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ==============================================================================\n",
     "# 3. TRANSFORMAÇÃO (TRANSFORMATION)\n",
-    "# ==============================================================================\n",
     "print(\"🛠️ Iniciando a limpeza, padronização e remoção de nulos...\")\n",
     "df_silver = df.copy()\n",
     "\n",
-    "# --- 3.1 RENOMEAÇÃO (Mapeamento Raw -> SQL Schema) ---\n",
+    "# 3.1 RENOMEAÇÃO (Mapeamento Raw -> SQL Schema) \n",
     "mapa_colunas = {\n",
     "    'Codigo da Ocorrencia': 'cod_ocr',\n",
     "    'Classificacao da Ocorrencia ': 'cls_ocr',\n",
@@ -147,7 +141,7 @@
     "\n",
     "df_silver = df_silver.rename(columns=mapa_colunas)\n",
     "\n",
-    "# --- 3.2 LIMPEZA DE TEXTO (Strings) ---\n",
+    "# 3.2 LIMPEZA DE TEXTO (Strings) \n",
     "cols_text = ['mun', 'uf', 'cls_ocr', 'tpo_ocr', 'mat_aer', 'tpo_aer', 'fab_aer', 'mdl_aer', 'fse_ope', 'nvl_dno']\n",
     "\n",
     "for col in cols_text:\n",
@@ -156,7 +150,7 @@
     "        df_silver[col] = df_silver[col].replace(['****', '***', ''], np.nan)\n",
     "        df_silver[col] = df_silver[col].fillna(\"NÃO INFORMADO\")\n",
     "\n",
-    "# --- 3.3 TRATAMENTO DE DATAS ---\n",
+    "# 3.3 TRATAMENTO DE DATAS \n",
     "print(\"   -> Processando datas...\")\n",
     "df_silver['dta_ocr'] = pd.to_datetime(df_silver['dta_ocr'], format='%d/%m/%Y %H:%M', errors='coerce')\n",
     "df_silver['dta_ocr'] = df_silver['dta_ocr'].fillna(pd.Timestamp('1900-01-01 00:00:00'))\n",
@@ -166,7 +160,7 @@
     "df_silver['dia'] = df_silver['dta_ocr'].dt.day\n",
     "df_silver['hor'] = df_silver['dta_ocr'].dt.hour\n",
     "\n",
-    "# --- 3.4 TRATAMENTO DE COORDENADAS ---\n",
+    "# 3.4 TRATAMENTO DE COORDENADAS \n",
     "print(\"   -> Corrigindo Lat/Lon científica...\")\n",
     "\n",
     "def limpar_coord(valor):\n",
@@ -182,7 +176,7 @@
     "if 'lat' in df_silver.columns: df_silver['lat'] = df_silver['lat'].apply(limpar_coord)\n",
     "if 'lon' in df_silver.columns: df_silver['lon'] = df_silver['lon'].apply(limpar_coord)\n",
     "\n",
-    "# --- 3.5 TRATAMENTO NUMÉRICO ---\n",
+    "# 3.5 TRATAMENTO NUMÉRICO \n",
     "print(\"   -> Convertendo números...\")\n",
     "cols_int = ['ttl_fat', 'ttl_rec', 'ttl_aer_env', 'ano_fab_aer', 'qtd_ase_aer']\n",
     "\n",
@@ -190,7 +184,7 @@
     "    if col in df_silver.columns:\n",
     "        df_silver[col] = pd.to_numeric(df_silver[col], errors='coerce').fillna(0).astype(int)\n",
     "\n",
-    "# --- 3.6 SEVERIDADE ---\n",
+    "# 3.6 SEVERIDADE \n",
     "def calcular_severidade(fatais):\n",
     "    if fatais == 0: return 'LEVE'\n",
     "    elif fatais <= 10: return 'MODERADA'\n",
@@ -199,7 +193,7 @@
     "\n",
     "df_silver['nvl_sev'] = df_silver['ttl_fat'].apply(calcular_severidade)\n",
     "\n",
-    "# --- 3.7 SELEÇÃO FINAL ---\n",
+    "# 3.7 SELEÇÃO FINAL \n",
     "cols_finais = [\n",
     "    'cod_ocr', 'dta_ocr', 'ano', 'mes', 'dia', 'hor', \n",
     "    'uf', 'mun', 'lat', 'lon', \n",
@@ -229,12 +223,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ==============================================================================\n",
     "# 4. CARGA NO BANCO DE DADOS (LOADING)\n",
-    "# ==============================================================================\n",
     "print(\"\\n🔌 Conectando ao Banco de Dados...\")\n",
     "\n",
-    "# --- CONFIGURAÇÃO ATUALIZADA (DOCKER) ---\n",
+    "# CONFIGURAÇÃO ATUALIZADA (DOCKER) \n",
     "# Se o script roda no Container 'jupyter-lab', o host do banco é o nome do serviço 'db'\n",
     "jdbc_hostname = \"db\"            \n",
     "jdbc_port     = \"5432\"\n",
