--- a/Transformer/etl_raw_to_silver.ipynb
+++ b/Transformer/etl_raw_to_silver.ipynb
@@ -20,10 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "41e23983",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🇧🇷 Iniciando o processo ETL (Raw -> Silver) - Acidentes Aéreos...\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -63,10 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "00bebac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📂 Buscando arquivo de dados brutos...\n",
+      "   -> Lendo Arquivo: ../Data_Layer/raw/data_raw.csv...\n",
+      "✅ Carga Raw Completa! Registros carregados: 6114\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. EXTRAÇÃO (EXTRACTION)\n",
     "print(\"📂 Buscando arquivo de dados brutos...\")\n",
@@ -101,10 +119,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e5c6668d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🛠️ Iniciando a limpeza, padronização e remoção de nulos...\n",
+      "   -> Processando datas...\n",
+      "   -> Corrigindo Lat/Lon científica...\n",
+      "   -> Convertendo números...\n",
+      "✨ Transformação concluída! Base Silver Final: 6114 registros.\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. TRANSFORMAÇÃO (TRANSFORMATION)\n",
     "print(\"🛠️ Iniciando a limpeza, padronização e remoção de nulos...\")\n",
@@ -218,10 +248,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "114a3cb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔌 Conectando ao Banco de Dados...\n",
+      "✅ Conectado com sucesso ao Host: db | DB: acidentes_db\n",
+      "📜 Verificando DDL...\n",
+      "💾 Inserindo 6114 registros na tabela 'public.acd'...\n",
+      "✅ SUCESSO! Dados carregados na tabela 'public.acd'.\n",
+      "\n",
+      "🚀 Job ETL finalizado em 2.09 segundos!\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. CARGA NO BANCO DE DADOS (LOADING)\n",
     "print(\"\\n🔌 Conectando ao Banco de Dados...\")\n",
@@ -304,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -318,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
