feat: add gold e etl silver to gold

--- a/Transformer/etl_raw_to_silver.ipynb
+++ b/Transformer/etl_raw_to_silver.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "41e23983",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🇧🇷 Iniciando o processo ETL (Raw -> Silver) - Acidentes Aéreos...\n"
+      "🇧🇷 Iniciando ETL Raw -> Silver (Acidentes Aéreos)...\n"
      ]
     }
    ],
@@ -39,19 +39,20 @@
     "import time\n",
     "from sqlalchemy import create_engine, text\n",
     "\n",
-    "# 1. CONFIGURAÇÃO E INÍCIO\n",
-    "print(\"🇧🇷 Iniciando o processo ETL (Raw -> Silver) - Acidentes Aéreos...\")\n",
+    "# ==============================================================================\n",
+    "# 2. CONFIGURAÇÃO E INÍCIO\n",
+    "# ==============================================================================\n",
+    "print(\"🇧🇷 Iniciando ETL Raw -> Silver (Acidentes Aéreos)...\")\n",
     "start_time = time.time()\n",
     "\n",
-    "# Função auxiliar para encontrar arquivos\n",
+    "# Função auxiliar para encontrar arquivos (Robustez de path)\n",
     "def encontrar_arquivo(nome_arquivo):\n",
     "    possible_paths = [\n",
     "        nome_arquivo,\n",
     "        os.path.join('Data_Layer', 'raw', nome_arquivo),\n",
     "        os.path.join('raw', nome_arquivo),\n",
     "        os.path.join('..', 'Data_Layer', 'raw', nome_arquivo),\n",
-    "        # Caminho absoluto interno do Docker\n",
-    "        rf\"/home/jovyan/work/Data_Layer/raw/{nome_arquivo}\" \n",
+    "        f\"/home/jovyan/work/Data_Layer/raw/{nome_arquivo}\" \n",
     "    ]\n",
     "    \n",
     "    for path in possible_paths:\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "00bebac0",
    "metadata": {},
    "outputs": [
@@ -80,13 +81,12 @@
      "output_type": "stream",
      "text": [
       "📂 Buscando arquivo de dados brutos...\n",
-      "   -> Lendo Arquivo: ../Data_Layer/raw/data_raw.csv...\n",
+      "   -> Lendo Arquivo: ..\\Data_Layer\\raw\\data_raw.csv...\n",
       "✅ Carga Raw Completa! Registros carregados: 6114\n"
      ]
     }
    ],
    "source": [
-    "# 2. EXTRAÇÃO (EXTRACTION)\n",
     "print(\"📂 Buscando arquivo de dados brutos...\")\n",
     "\n",
     "nome_arquivo_raw = 'data_raw.csv'\n",
@@ -98,10 +98,14 @@
     "\n",
     "try:\n",
     "    print(f\"   -> Lendo Arquivo: {path_raw}...\")\n",
-    "    # Lendo com sep=';' e encoding latin1\n",
-    "    df = pd.read_csv(path_raw, sep=';', encoding='latin1', dtype=str)\n",
+    "    \n",
+    "    df = pd.read_csv(path_raw, sep=';', encoding='utf-8', dtype=str)\n",
     "    \n",
     "    print(f\"✅ Carga Raw Completa! Registros carregados: {len(df)}\")\n",
+    "\n",
+    "except UnicodeDecodeError:\n",
+    "    print(\"⚠️ Falha com UTF-8. Tentando Latin-1...\")\n",
+    "    df = pd.read_csv(path_raw, sep=';', encoding='latin1', dtype=str)\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"❌ Erro ao ler CSV: {e}\")\n",
@@ -119,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "e5c6668d",
    "metadata": {},
    "outputs": [
@@ -127,20 +131,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🛠️ Iniciando a limpeza, padronização e remoção de nulos...\n",
+      "🛠️ Iniciando a limpeza e padronização...\n",
       "   -> Processando datas...\n",
       "   -> Corrigindo Lat/Lon científica...\n",
       "   -> Convertendo números...\n",
-      "✨ Transformação concluída! Base Silver Final: 6114 registros.\n"
+      "   -> 🧹 Removendo Outliers de Fatalidades...\n",
+      "      [Estatística] Q1: 1.0 | Q3: 2.0 | Limite de Corte: 3.5\n",
+      "      [Limpeza] Registros removidos (Outliers extremos): 64\n",
+      "✨ Transformação concluída! Base Silver Final: 6050 registros.\n"
      ]
     }
    ],
    "source": [
-    "# 3. TRANSFORMAÇÃO (TRANSFORMATION)\n",
-    "print(\"🛠️ Iniciando a limpeza, padronização e remoção de nulos...\")\n",
+    "print(\"🛠️ Iniciando a limpeza e padronização...\")\n",
     "df_silver = df.copy()\n",
     "\n",
-    "# 3.1 RENOMEAÇÃO (Mapeamento Raw -> SQL Schema) \n",
+    "# 4.1 RENOMEAÇÃO (Mapeamento Raw -> SQL Schema)\n",
     "mapa_colunas = {\n",
     "    'Codigo da Ocorrencia': 'cod_ocr',\n",
     "    'Classificacao da Ocorrencia ': 'cls_ocr',\n",
@@ -171,7 +177,7 @@
     "\n",
     "df_silver = df_silver.rename(columns=mapa_colunas)\n",
     "\n",
-    "# 3.2 LIMPEZA DE TEXTO (Strings) \n",
+    "# 4.2 LIMPEZA DE TEXTO (Strings)\n",
     "cols_text = ['mun', 'uf', 'cls_ocr', 'tpo_ocr', 'mat_aer', 'tpo_aer', 'fab_aer', 'mdl_aer', 'fse_ope', 'nvl_dno']\n",
     "\n",
     "for col in cols_text:\n",
@@ -180,7 +186,7 @@
     "        df_silver[col] = df_silver[col].replace(['****', '***', ''], np.nan)\n",
     "        df_silver[col] = df_silver[col].fillna(\"NÃO INFORMADO\")\n",
     "\n",
-    "# 3.3 TRATAMENTO DE DATAS \n",
+    "# 4.3 TRATAMENTO DE DATAS\n",
     "print(\"   -> Processando datas...\")\n",
     "df_silver['dta_ocr'] = pd.to_datetime(df_silver['dta_ocr'], format='%d/%m/%Y %H:%M', errors='coerce')\n",
     "df_silver['dta_ocr'] = df_silver['dta_ocr'].fillna(pd.Timestamp('1900-01-01 00:00:00'))\n",
@@ -190,9 +196,8 @@
     "df_silver['dia'] = df_silver['dta_ocr'].dt.day\n",
     "df_silver['hor'] = df_silver['dta_ocr'].dt.hour\n",
     "\n",
-    "# 3.4 TRATAMENTO DE COORDENADAS \n",
+    "# 4.4 TRATAMENTO DE COORDENADAS\n",
     "print(\"   -> Corrigindo Lat/Lon científica...\")\n",
-    "\n",
     "def limpar_coord(valor):\n",
     "    if pd.isna(valor) or valor == '': return 0.0\n",
     "    try:\n",
@@ -206,7 +211,7 @@
     "if 'lat' in df_silver.columns: df_silver['lat'] = df_silver['lat'].apply(limpar_coord)\n",
     "if 'lon' in df_silver.columns: df_silver['lon'] = df_silver['lon'].apply(limpar_coord)\n",
     "\n",
-    "# 3.5 TRATAMENTO NUMÉRICO \n",
+    "# 4.5 TRATAMENTO NUMÉRICO\n",
     "print(\"   -> Convertendo números...\")\n",
     "cols_int = ['ttl_fat', 'ttl_rec', 'ttl_aer_env', 'ano_fab_aer', 'qtd_ase_aer']\n",
     "\n",
@@ -214,7 +219,33 @@
     "    if col in df_silver.columns:\n",
     "        df_silver[col] = pd.to_numeric(df_silver[col], errors='coerce').fillna(0).astype(int)\n",
     "\n",
-    "# 3.6 SEVERIDADE \n",
+    "# --- 4.6 REMOÇÃO DE OUTLIERS (LÓGICA CORRIGIDA PARA DADOS ESPARSOS) ---\n",
+    "print(\"   -> 🧹 Removendo Outliers de Fatalidades...\")\n",
+    "total_antes = len(df_silver)\n",
+    "\n",
+    "df_fatais = df_silver[df_silver['ttl_fat'] > 0]\n",
+    "\n",
+    "if not df_fatais.empty:\n",
+    "    Q1 = df_fatais['ttl_fat'].quantile(0.25)\n",
+    "    Q3 = df_fatais['ttl_fat'].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    \n",
+    "    limite_superior = Q3 + 1.5 * IQR\n",
+    "    \n",
+    "    print(f\"      [Estatística] Q1: {Q1} | Q3: {Q3} | Limite de Corte: {limite_superior}\")\n",
+    "    \n",
+    "    df_silver = df_silver[\n",
+    "        (df_silver['ttl_fat'] == 0) | \n",
+    "        (df_silver['ttl_fat'] <= limite_superior)\n",
+    "    ].copy()\n",
+    "else:\n",
+    "    print(\"      [Aviso] Não há fatalidades suficientes para cálculo de IQR.\")\n",
+    "\n",
+    "total_removido = total_antes - len(df_silver)\n",
+    "print(f\"      [Limpeza] Registros removidos (Outliers extremos): {total_removido}\")\n",
+    "# ----------------------------------------------------------------------\n",
+    "\n",
+    "# 4.7 SEVERIDADE (Lógica de Negócio)\n",
     "def calcular_severidade(fatais):\n",
     "    if fatais == 0: return 'LEVE'\n",
     "    elif fatais <= 10: return 'MODERADA'\n",
@@ -223,13 +254,13 @@
     "\n",
     "df_silver['nvl_sev'] = df_silver['ttl_fat'].apply(calcular_severidade)\n",
     "\n",
-    "# 3.7 SELEÇÃO FINAL \n",
+    "# 4.8 SELEÇÃO FINAL\n",
     "cols_finais = [\n",
     "    'cod_ocr', 'dta_ocr', 'ano', 'mes', 'dia', 'hor', \n",
     "    'uf', 'mun', 'lat', 'lon', \n",
     "    'cls_ocr', 'tpo_ocr', 'fse_ope', \n",
     "    'tpo_aer', 'fab_aer', 'mdl_aer', 'mat_aer', 'ano_fab_aer', 'qtd_ase_aer',\n",
-    "    'nvl_dno', 'ttl_fat', 'ttl_rec', 'nvl_sev'\n",
+    "    'nvl_dno', 'ttl_fat', 'ttl_rec', 'ttl_aer_env', 'nvl_sev'\n",
     "]\n",
     "cols_existentes = [c for c in cols_finais if c in df_silver.columns]\n",
     "df_final = df_silver[cols_existentes].copy()\n",
@@ -248,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "114a3cb5",
    "metadata": {},
    "outputs": [
@@ -258,98 +289,76 @@
      "text": [
       "\n",
       "🔌 Conectando ao Banco de Dados...\n",
-      "✅ Conectado com sucesso ao Host: db | DB: acidentes_db\n",
-      "📜 Verificando DDL...\n",
-      "💾 Inserindo 6114 registros na tabela 'public.acd'...\n",
-      "✅ SUCESSO! Dados carregados na tabela 'public.acd'.\n",
+      "✅ Conectado via LOCALHOST\n",
+      "🛠️ Verificando schema 'silver'...\n",
+      "✅ Schema 'silver' garantido!\n",
+      "💾 Inserindo 6050 registros na tabela 'silver.acd'...\n",
+      "✅ SUCESSO! Dados carregados na tabela 'silver.acd'.\n",
       "\n",
-      "🚀 Job ETL finalizado em 2.09 segundos!\n"
+      "🚀 Job ETL Raw->Silver finalizado em 4.77 segundos!\n"
      ]
     }
    ],
    "source": [
-    "# 4. CARGA NO BANCO DE DADOS (LOADING)\n",
     "print(\"\\n🔌 Conectando ao Banco de Dados...\")\n",
     "\n",
-    "# CONFIGURAÇÃO ATUALIZADA (DOCKER) \n",
-    "# Se o script roda no Container 'jupyter-lab', o host do banco é o nome do serviço 'db'\n",
-    "jdbc_hostname = \"db\"            \n",
-    "jdbc_port     = \"5432\"\n",
-    "jdbc_database = \"acidentes_db\"  \n",
-    "db_user       = \"postgres\"\n",
-    "db_password   = \"admin\"\n",
+    "db_name = \"acidentes_db\"\n",
+    "db_user = \"postgres\"\n",
+    "db_pass = \"admin\"\n",
     "\n",
-    "# URL de Conexão\n",
-    "db_url = f\"postgresql+psycopg2://{db_user}:{db_password}@{jdbc_hostname}:{jdbc_port}/{jdbc_database}\"\n",
-    "\n",
-    "# 4.1 Criação da Engine\n",
     "engine = None\n",
     "try:\n",
-    "    engine = create_engine(db_url)\n",
-    "    with engine.connect() as conn:\n",
-    "        pass \n",
-    "    print(f\"✅ Conectado com sucesso ao Host: {jdbc_hostname} | DB: {jdbc_database}\")\n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(f\"⚠️ Falha ao conectar em '{jdbc_hostname}'. Tentando 'localhost' (caso esteja rodando localmente)...\")\n",
+    "    url = f\"postgresql+psycopg2://{db_user}:{db_pass}@localhost:5432/{db_name}\"\n",
+    "    engine = create_engine(url)\n",
+    "    with engine.connect() as conn: pass\n",
+    "    print(\"✅ Conectado via LOCALHOST\")\n",
+    "except:\n",
+    "    print(\"⚠️ Localhost falhou. Tentando Docker...\")\n",
     "    try:\n",
-    "        # Fallback para localhost se você rodar fora do Docker\n",
-    "        db_url_local = f\"postgresql+psycopg2://{db_user}:{db_password}@localhost:5432/{jdbc_database}\"\n",
-    "        engine = create_engine(db_url_local)\n",
-    "        with engine.connect() as conn:\n",
-    "            pass\n",
-    "        print(\"✅ Conectado via Localhost!\")\n",
-    "    except Exception as e2:\n",
-    "        print(f\"❌ Erro fatal de conexão: {e2}\")\n",
+    "        url = f\"postgresql+psycopg2://{db_user}:{db_pass}@db:5432/{db_name}\"\n",
+    "        engine = create_engine(url)\n",
+    "        with engine.connect() as conn: pass\n",
+    "        print(\"✅ Conectado via DOCKER\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Erro fatal de conexão: {e}\")\n",
     "        exit(1)\n",
     "\n",
-    "# 4.2 EXECUÇÃO DO DDL\n",
-    "print(\"📜 Verificando DDL...\")\n",
-    "possible_ddl_paths = [\n",
-    "    \"ddl.sql\",\n",
-    "    os.path.join(\"Data_Layer\", \"silver\", \"ddl.sql\"),\n",
-    "    os.path.join(\"silver\", \"ddl.sql\")\n",
-    "]\n",
-    "\n",
-    "for path in possible_ddl_paths:\n",
-    "    if os.path.exists(path):\n",
-    "        try:\n",
-    "            with open(path, 'r') as file:\n",
-    "                ddl_content = file.read()\n",
-    "            with engine.connect() as conn:\n",
-    "                conn.execute(text(ddl_content))\n",
-    "                conn.commit()\n",
-    "            print(f\"✅ DDL executado: {path}\")\n",
-    "            break\n",
-    "        except Exception as e:\n",
-    "            print(f\"⚠️ Erro no DDL: {e}\")\n",
-    "\n",
-    "# 4.3 INSERÇÃO\n",
     "try:\n",
-    "    print(f\"💾 Inserindo {len(df_final)} registros na tabela 'public.acd'...\")\n",
+    "    with engine.connect() as conn:\n",
+    "        print(\"🛠️ Verificando schema 'silver'...\")\n",
+    "        conn.execute(text(\"CREATE SCHEMA IF NOT EXISTS silver;\"))\n",
+    "        conn.commit()\n",
+    "        print(\"✅ Schema 'silver' garantido!\")\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Erro ao criar schema: {e}\")\n",
+    "    exit(1)\n",
+    "\n",
+    "# INSERÇÃO\n",
+    "try:\n",
+    "    print(f\"💾 Inserindo {len(df_final)} registros na tabela 'silver.acd'...\")\n",
     "    \n",
     "    df_final.to_sql(\n",
     "        name='acd',         \n",
-    "        schema='public',    \n",
+    "        schema='silver',    \n",
     "        con=engine,\n",
     "        if_exists='replace', \n",
     "        index=False,\n",
     "        chunksize=1000,\n",
     "        method='multi'\n",
     "    )\n",
-    "    print(\"✅ SUCESSO! Dados carregados na tabela 'public.acd'.\")\n",
+    "    print(\"✅ SUCESSO! Dados carregados na tabela 'silver.acd'.\")\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"❌ Erro na inserção: {e}\")\n",
     "    exit(1)\n",
     "\n",
-    "print(f\"\\n🚀 Job ETL finalizado em {time.time() - start_time:.2f} segundos!\")"
+    "print(f\"\\n🚀 Job ETL Raw->Silver finalizado em {time.time() - start_time:.2f} segundos!\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -363,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
