fix: corrigindo consultas SQL

--- a/Transformer/etl_raw_to_silver.ipynb
+++ b/Transformer/etl_raw_to_silver.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "41e23983",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "00bebac0",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
      "output_type": "stream",
      "text": [
       "📂 Buscando arquivo de dados brutos...\n",
-      "   -> Lendo Arquivo: ..\\Data_Layer\\raw\\data_raw.csv...\n",
+      "   -> Lendo Arquivo: ../Data_Layer/raw/data_raw.csv...\n",
       "✅ Carga Raw Completa! Registros carregados: 6114\n"
      ]
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "e5c6668d",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "114a3cb5",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
       "💾 Inserindo 6050 registros na tabela 'silver.acd'...\n",
       "✅ SUCESSO! Dados carregados na tabela 'silver.acd'.\n",
       "\n",
-      "🚀 Job ETL Raw->Silver finalizado em 4.77 segundos!\n"
+      "🚀 Job ETL Raw->Silver finalizado em 2.07 segundos!\n"
      ]
     }
    ],
@@ -372,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
