--- a/Transformer/etl_silver_to_gold.ipynb
+++ b/Transformer/etl_silver_to_gold.ipynb
@@ -20,10 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ac056aa7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🏆 Iniciando ETL Gold (Silver -> DW)...\n",
+      "📜 Arquivo DDL encontrado: ../Data_Layer/gold/ddl.sql\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -96,10 +105,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f9ec8e99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔌 Conectando ao banco de dados...\n",
+      "✅ Conectado via LOCALHOST\n",
+      "🛠️ Criando/Verificando schema '\"DW\"'...\n",
+      "🔄 Executando DDL (Recriando tabelas)...\n",
+      "✅ Estrutura 'DW' Pronta!\n"
+     ]
+    }
+   ],
    "source": [
     "engine = None\n",
     "print(\"\\n🔌 Conectando ao banco de dados...\")\n",
@@ -151,10 +173,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "df322772",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📥 Lendo tabela Silver: silver.acd\n",
+      "✅ Registros carregados: 6050\n",
+      "   -> Garantindo tipagem numérica para Lat/Lon...\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"\\n📥 Lendo tabela Silver: {SILVER_TABLE}\")\n",
     "try:\n",
@@ -187,10 +220,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9779d7db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔨 Construindo Dimensões...\n",
+      "---> Carga: DW.dim_aer (4368 linhas)\n",
+      "---> Carga: DW.dim_loc (1244 linhas)\n",
+      "---> Carga: DW.dim_tmp (3143 linhas)\n",
+      "---> Carga: DW.dim_ocr (6050 linhas)\n"
+     ]
+    }
+   ],
    "source": [
     "def save_dimension(df_unique, table_name):\n",
     "    if df_unique.empty: return\n",
@@ -244,10 +290,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1986a300",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔗 Cruzando dados para Fato...\n",
+      "   -> Lendo dimensões do schema \"DW\"...\n",
+      "   -> Realizando Joins...\n",
+      "\n",
+      "💾 Salvando Fato (\"DW\".fat_ocr)...\n",
+      "✅ SUCESSO! 6050 registros carregados no DW.\n",
+      "🚀 Tempo total: 2.17s\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n🔗 Cruzando dados para Fato...\")\n",
     "\n",
@@ -320,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
