fix: removendo comentarios desnecessarios

--- a/Transformer/etl_silver_to_gold.ipynb
+++ b/Transformer/etl_silver_to_gold.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ac056aa7",
    "metadata": {},
    "outputs": [
@@ -40,24 +40,19 @@
     "import time\n",
     "from sqlalchemy import create_engine, text\n",
     "\n",
-    "# ==============================================================================\n",
-    "# 2. CONFIGURAÇÃO E INÍCIO\n",
-    "# ==============================================================================\n",
     "print(\"🏆 Iniciando ETL Gold (Silver -> DW)...\")\n",
     "start_time = time.time()\n",
     "\n",
-    "# CONFIGURAÇÕES DE SCHEMA\n",
-    "GOLD_SCHEMA = \"DW\"           # Nome do Schema de destino (Maiúsculo)\n",
-    "SILVER_TABLE = \"silver.acd\"  # Tabela de origem\n",
+    "# Configurações de Schema\n",
+    "GOLD_SCHEMA = \"DW\"           \n",
+    "SILVER_TABLE = \"silver.acd\"  \n",
     "DDL_FILE_NAME = \"ddl.sql\"\n",
     "\n",
     "db_name = \"acidentes_db\"\n",
     "db_user = \"postgres\"\n",
     "db_pass = \"admin\"\n",
     "\n",
-    "# ==============================================================================\n",
-    "# 3. LEITURA DO ARQUIVO DDL EXTERNO\n",
-    "# ==============================================================================\n",
+    "# Leitura do DDL da gold\n",
     "def ler_ddl_externo(nome_arquivo):\n",
     "    caminhos_tentativa = [\n",
     "        os.path.join(\"gold\", nome_arquivo),                       \n",
@@ -84,7 +79,6 @@
     "if not DDL_CONTENT:\n",
     "    raise FileNotFoundError(f\"Pare! O arquivo {DDL_FILE_NAME} precisa existir na pasta gold.\")\n",
     "\n",
-    "# --- TRUQUE: SUBSTITUIÇÃO DINÂMICA COM ASPAS ---\n",
     "# Garante que o SQL use \"DW\" (com aspas) para respeitar a caixa alta\n",
     "DDL_FINAL = DDL_CONTENT.replace(\"gold.\", f'\"{GOLD_SCHEMA}\".')\n",
     "DDL_FINAL = DDL_FINAL.replace(\"DW.\", f'\"{GOLD_SCHEMA}\".') \n",
@@ -173,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "df322772",
    "metadata": {},
    "outputs": [
@@ -199,7 +193,6 @@
     "    if 'ttl_aer_env' not in df_silver.columns:\n",
     "        df_silver['ttl_aer_env'] = 1\n",
     "\n",
-    "    # --- GARANTIA DE TIPOS ---\n",
     "    print(\"   -> Garantindo tipagem numérica para Lat/Lon...\")\n",
     "    df_silver['lat'] = pd.to_numeric(df_silver['lat'], errors='coerce').fillna(0.0)\n",
     "    df_silver['lon'] = pd.to_numeric(df_silver['lon'], errors='coerce').fillna(0.0)\n",
@@ -290,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1986a300",
    "metadata": {},
    "outputs": [
@@ -313,7 +306,6 @@
     "print(\"\\n🔗 Cruzando dados para Fato...\")\n",
     "\n",
     "try:\n",
-    "    # AQUI ESTÁ A CORREÇÃO PRINCIPAL: \n",
     "    # Usamos aspas simples (') fora e aspas duplas (\") dentro para o schema\n",
     "    # Ex: SELECT * FROM \"DW\".dim_aer\n",
     "    \n",
